--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -33,11 +33,18 @@ Combined them all into one component, export, slice, and make smaller for size a
 [Fusion link]
 [STL file]<a download href='./path_to_file.stl'>Download my STL file <\a>
 [Gcode file] 
+ 
+###Results:
+<img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5956.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5959.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5963.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5966.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5965.jpeg" alt="Uno pic" style="width:262px;height:500px;">
+<img src="IMG_5964.jpeg" alt="Uno pic" style="width:262px;height:500px;">
 
-Print: 
-Results:
--images  
-Lessons: 
+
+###Lessons: 
 
 
 
