--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -29,6 +29,8 @@ Made a sketch of a rectangle with eight holes in it, then extruded, then extrude
 
 Combined them all into one component, export, slice, and make smaller for size and time reasons, added a brim.  
 
+The I printed it, and the first few times it didn't work because of an error in my model, and because I needed to slow down the printer. So I remedied those issues and ended up being successful and printing what I had designed!
+
 ###Here are all the files for this print: 
 [Fusion link]
 [STL file]<a download href='./path_to_file.stl'>Download my STL file <\a>
@@ -46,8 +48,9 @@ Combined them all into one component, export, slice, and make smaller for size a
 
 ###Lessons: 
 
+Further brainstorming has led me to conclude that I should use buttons instead of photoresistors/thermisters for the input in my final project. Sadly, that makes this design obsolete. However, the many iterations it went through while I was printing it have taught me to always triple check my models before printing them, and to go to the source to try and locate mistakes before all else. 
 
-
+##Photometry: 
 
 Scandy:
 
@@ -57,9 +60,7 @@ https://www.scandy.co/apps/scandy-pro
 
  
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a	[link](../index.html).
+  
 
 
 
