--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -59,7 +59,7 @@ Further brainstorming has led me to conclude that I should use buttons instead o
 <a id="B">
 ##Photogrammetry: 
 
-Here is a [link](/https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
+Here is a [link](https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
 
 https://www.scandy.co/apps/scandy-pro
 
