--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -60,10 +60,10 @@ Further brainstorming has led me to conclude that I should use buttons instead o
 ##Photogrammetry: 
 
 Here is a [link](https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
-
-https://www.scandy.co/apps/scandy-pro
-
-
+<br><br>
+Here is a link to my scan: 
+<br><br>
+!Note! I do not recommend this app as it only uses the selfie camera and greatly limits the number of scans you can take. 
 
  
 
