--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -37,7 +37,7 @@ The I printed it, and the first few times it didn't work because of an error in 
 ###Here are all the files for this print: 
 [Fusion link]
 <br><br>
-[STL file]<a download href='./path_to_file.stl'>Download my STL file <\a>
+[STL file]<a download href='./05_3D_Design_and_Printing/4_AbiAdam_Casing.stl.textClipping'>Download my STL file <\a>
 <br><br>
 [Gcode file] 
  
@@ -58,7 +58,7 @@ Further brainstorming has led me to conclude that I should use buttons instead o
 
 
 <a id="B">
-  
+
 ##Photogrammetry: 
 
 Here is a [link](https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
