--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -37,7 +37,7 @@ The I printed it, and the first few times it didn't work because of an error in 
 ###Here are all the files for this print: 
 [Fusion link]
 <br><br>
-[STL file]<a download href='../4_AbiAdam_Casing.stl.textClipping'>Download my STL file <\a>
+[STL file]<a download href='../4_AbiAdam_Casing.stl.textClipping'>STL File<\a>
 <br><br>
 [Gcode file] 
  
