--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -35,11 +35,11 @@ Combined them all into one component, export, slice, and make smaller for size a
 The I printed it, and the first few times it didn't work because of an error in my model, and because I needed to slow down the printer. So I remedied those issues and ended up being successful and printing what I had designed!
 
 ###Here are all the files for this print: 
-[Fusion link]
+[Fusion File](https://a360.co/3Iip9Rc)
 <br><br>
-[STL file]<a download href='./4_AbiAdam_Casing.stl'>STL File<\a>
+<a download href='./4_AbiAdam_Casing.stl'>STL File <\a>
 <br><br>
-[Gcode file]<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m (1).gcode'>STL File<\a>
+<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m (1).gcode'>Gcode File <\a>
  
 ###Results:
 <img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:400px;">
