--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -39,7 +39,7 @@ The I printed it, and the first few times it didn't work because of an error in 
 <br><br>
 <a download href='./4_AbiAdam_Casing.stl'>STL File <\a>
 <br><br>
-<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m (1).gcode'>Gcode File <\a>
+<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File <\a>
  
 ###Results:
 <img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:400px;">
