--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -37,9 +37,9 @@ The I printed it, and the first few times it didn't work because of an error in 
 ###Here are all the files for this print: 
 [Fusion File](https://a360.co/3Iip9Rc)
 <br><br>
-<a download href='./4_AbiAdam_Casing.stl'>STL File <\a>
+<a download href='./4_AbiAdam_Casing.stl'>STL File
 <br><br>
-<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File <\a>
+<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File 
  
 ###Results:
 <img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:400px;">
