--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -63,9 +63,9 @@ Further brainstorming has led me to conclude that I should use buttons instead o
 
 Here is a [link](https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
 <br><br>
-Here is a link to my scan: <a download href='./PhotogrammetryScan-cm2.stl'>Photogrammetry Scan<\a>
+Here is a link to my scan: <a download href='./PhotogrammetryScan-cm2.stl'>Photogrammetry Scan
 <br><br>
-!Note! I do not recommend this app as it only uses the selfie camera and greatly limits the number of scans you can take. 
+!Note! I do not recommend this app as it only uses the selfie camera and greatly limits the number of scans you can take. However, the scan of me is not bad and definitely captures my features and makes something that is recognizable as me. 
 
  
 
