--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -37,9 +37,9 @@ The I printed it, and the first few times it didn't work because of an error in 
 ###Here are all the files for this print: 
 [Fusion File](https://a360.co/3Iip9Rc)
 <br><br>
-<a download href='./4_AbiAdam_Casing.stl'>STL File
+<a download href='./4_AbiAdam_Casing.stl'>STL File </a>
 <br><br>
-<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File 
+<a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File </a>
  
 ###Results:
 <img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:400px;">
@@ -63,7 +63,7 @@ Further brainstorming has led me to conclude that I should use buttons instead o
 
 Here is a [link](https://www.scandy.co/apps/scandy-pro) to the app I used, Scandy. 
 <br><br>
-Here is a link to my scan: <a download href='./PhotogrammetryScan-cm2.stl'>Photogrammetry Scan
+Here is a link to my scan: <a download href='./PhotogrammetryScan-cm2.stl'>Photogrammetry Scan </a>
 <br><br>
 !Note! I do not recommend this app as it only uses the selfie camera and greatly limits the number of scans you can take. However, the scan of me is not bad and definitely captures my features and makes something that is recognizable as me. 
 
