--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -30,9 +30,14 @@ Outline:
 
 Made a sketch of a rectangle with eight holes in it, then extruded, then extruded another rectangle within that rectangle to create a cut out area inside.  
 
+<img src="FusionModel.jpeg" alt="Fusion Model" style="width: 314px;height:188px;">
+
 Combined them all into one component, export, slice, and make smaller for size and time reasons, added a brim.  
 
-The I printed it, and the first few times it didn't work because of an error in my model, and because I needed to slow down the printer. So I remedied those issues and ended up being successful and printing what I had designed!
+<img src="Slicing1.jpeg" alt="SlicingSideView" style="width: 314px;height:188px;">
+<img src="Slicing2.jpeg" alt="SlicingOverheadView" style="width: 314px;height:188px;">
+
+Then I printed it, and the first few times it didn't work because of an error in my model, and because I needed to slow down the printer. So I remedied those issues and ended up being successful and printing what I had designed!
 
 ###Here are all the files for this print: 
 [Fusion File](https://a360.co/3Iip9Rc)
@@ -67,7 +72,7 @@ Here is a link to my scan: <a download href='./PhotogrammetryScan-cm2.stl'>Photo
 <br><br>
 !Note! I do not recommend this app as it only uses the selfie camera and greatly limits the number of scans you can take. However, the scan of me is not bad and definitely captures my features and makes something that is recognizable as me. 
 
- 
+ <img src="PhotogrammetrySelf" alt="PhotogrammetryScan" style="width:188px;height:188px;">
 
   
 
