--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -40,7 +40,7 @@
 
 - 3D printer filament (as I still intend on printing the casing for the ciruitry, and the arrows to place on the buttons)
 - 26 buttons
-  - 24 buttons (for the method allowing different degrees of sound intensity), and an additional 2 for the octave changer 
+  - 24 buttons for the method allowing different degrees of sound intensity, and an additional 2 for the octave changer 
 - Many wires
 - Wire strippers
 - Resistors 
