--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -49,6 +49,7 @@
 
 #Timeline: 
 
+- Create CAD designs (July 10th)
 - Assemble smaller versions of the circuit and write sections of code for proof of concept 
   - make use of existing pressure sensor code and modify it, also begin with the small breadboard before scaling up 
 - Write overall psuedocode, draw circuit diagram 
