--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -32,7 +32,7 @@ Made a sketch of a rectangle with eight holes in it, then extruded, then extrude
 
 <img src="FusionModel.jpeg" alt="Fusion Model" style="width: 314px;height:188px;">
 
-Combined them all into one component, export, slice, and make smaller for size and time reasons, added a brim.  
+I combined them all into one component, then saved them as a mesh, then imported into PrusaSlicer to slice and shrink the model so it didn't take too long to print, and I added a brim.   
 
 <img src="Slicing1.jpeg" alt="SlicingSideView" style="width: 314px;height:188px;">
 <img src="Slicing2.jpeg" alt="SlicingOverheadView" style="width: 314px;height:188px;">
