--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -47,6 +47,9 @@ Then I printed it, and the first few times it didn't work because of an error in
 <a download href='./4_AbiAdam_Casing_0.3mm_PLA_MK3S_17m.gcode'>Gcode File </a>
  
 ###Results:
+
+*I've included images of the failed prints as well to illustrate the process and show my learning curve
+
 <img src="IMG_5947.jpeg" alt="Uno pic" style="width:262px;height:400px;">
 <img src="IMG_5956.jpeg" alt="Uno pic" style="width:262px;height:400px;">
 <img src="IMG_5959.jpeg" alt="Uno pic" style="width:262px;height:400px;">
