--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -39,13 +39,34 @@
 #Bill of Materials: 
 
 - 3D printer filament (as I still intend on printing the casing for the ciruitry, and the arrows to place on the buttons)
-- 26 buttons
+- 26 buttons 
   - 24 buttons for the method allowing different degrees of sound intensity, and an additional 2 for the octave changer 
 - Many wires
 - Wire strippers
 - Resistors 
 - 2 seven segment displays - or a 14 segment display 
-- A speaker/piezo buzzer 
+- A speaker/piezo buzzer
+
+<table>
+  <tr>
+    <th>Part Name</th>
+    <th>Quantity</th>
+    <th>Use</th>
+    <th>Price</th>
+  </tr>
+  <tr>
+    <td>Printer Filament</td>
+    <td>TBD</td>
+    <td>Making the casing for the circuitry</td>
+    <td>Stocked in the lab</td>
+  </tr>
+  <tr>
+    <td>Buttons</td>
+    <td>26</td>
+    <td>To serve as the input and for the octave changer</td>
+    <td>$4.99 for 20 buttons [link](https://www.amazon.com/Momentary-Tactile-Through-Breadboard-Friendly/dp/B07WF76VHT/ref=asc_df_B07WF76VHT/?tag=hyprod-20&linkCode=df0&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145&psc=1&tag=&ref=&adgrpid=79419940980&hvpone=&hvptwo=&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145)</td>
+  </tr>
+</table> 
 
 #Timeline: 
 
