--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -78,6 +78,12 @@
     <td>Creating the ciruit</td>
     <td>Stocked in the lab</td>
   </tr>
+   <tr>
+    <td>Breadboard</td>
+    <td>1</td>
+    <td>Creating the ciruit</td>
+    <td>Stocked in the lab</td>
+  </tr>
   <tr>
     <td>7 Segment Displays</td>
     <td>2</td>
