adding images and text

--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -12,9 +12,43 @@
 
 
 
-  ### Week 6: Electronic Input Devices
+# Week 6: Electronic Input Devices
 
-  Here is an image: 
+##B. Hand-Crafter Sensor: 
+
+#Capacitive Sensor: 
+
+I used 10K resistors to build the following circuit: 
+
+IMAGE OF THE CIRCUIT HERE 
+
+Resultant Values: 
+Min = -11
+Max = 650 
+
+   <img src="CapactitativeSensor.jpeg" alt="normal graph" style="width:262px;height:400px;">
+
+I can control this range with the pressure I apply to the sensor, whether I touch it with my fingers or leave another layer in between, or if I push with both fingers at once as opposed to one against a desk. 
+
+I can also control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
+
+#Lowering the voltage:
+- going from 5V to 3.3V 
+- leads to a greater range
+Min = -4
+Max = 1316
+
+ <img src="LoweredVoltage.jpeg" alt="lowered voltage" style="width:262px;height:400px;">
+
+#Changing resistors: 
+- Going from 10K to 1K
+- Led to a smaller range 
+Min = -17
+Max = 109
+
+<img src="1KResistors.jpeg" alt="changed resistance" style="width:262px;height:400px;">
+
+
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
