--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -16,7 +16,7 @@
 
 ##B. Hand-Crafter Sensor: 
 
-#Capacitive Sensor: 
+###Capacitive Sensor: 
 
 I used 10K resistors to build the following circuit: 
 
@@ -32,7 +32,7 @@ I can control this range with the pressure I apply to the sensor, whether I touc
 
 I can also control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
 
-#Lowering the voltage:
+###Lowering the voltage:
 - going from 5V to 3.3V 
 - leads to a greater range
 Min = -4
@@ -40,7 +40,7 @@ Max = 1316
 
  <img src="LoweredVoltage.jpeg" alt="lowered voltage" style="width:262px;height:400px;">
 
-#Changing resistors: 
+###Changing resistors: 
 - Going from 10K to 1K
 - Led to a smaller range 
 Min = -17
