--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -19,23 +19,27 @@
 ###Capacitive Sensor: 
 
 I used 10K resistors to build the following circuit: 
-
+</br></br>
 IMAGE OF THE CIRCUIT HERE 
-
+</br></br>
 Resultant Values: 
-Min = -11
+Min = -11</br>
 Max = 650 
 
    <img src="CapactitativeSensor.jpeg" alt="normal graph" style="width:1138px;height:706px;">
 
 I can control this range with the pressure I apply to the sensor, whether I touch it with my fingers or leave another layer in between, or if I push with both fingers at once as opposed to one against a desk. 
-
+ </br>
+ </br>
 I can also control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
-
+</br>
+ </br>
 ###Lowering the voltage:
 - going from 5V to 3.3V 
 - leads to a greater range
-Min = -4
+</br>
+ </br>
+Min = -4 </br>
 Max = 1316
 
  <img src="LoweredVoltage.jpeg" alt="lowered voltage" style="width:1138px;height:706px;">
@@ -43,7 +47,7 @@ Max = 1316
 ###Changing resistors: 
 - Going from 10K to 1K
 - Led to a smaller range 
-Min = -17
+Min = -17 </br>
 Max = 109
 
 <img src="1KResistors.jpeg" alt="changed resistance" style="width:1138px;height:706px;">
