--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -22,7 +22,7 @@ I used 10K resistors to build the following circuit:
 </br></br>
 IMAGE OF THE CIRCUIT HERE 
 </br></br>
-Resultant Values: 
+Resultant Values: </br>
 Min = -11</br>
 Max = 650 
 
