--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -20,7 +20,13 @@
 
 I used 10K resistors to build the following circuit: 
 </br></br>
-IMAGE OF THE CIRCUIT HERE 
+
+<img src="IMG_3270.jpeg" alt="normal graph" style="width:703px;height:690px;">
+
+<img src="IMG_5989.JPG" alt="normal graph" style="width:1997px;height:1507.5px;">
+<img src="IMG_5988.JPG" alt="normal graph" style="width:1501.5px;height:1669px;">
+
+
 </br></br>
 Resultant Values: </br>
 Min = -11</br>
