--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -14,33 +14,40 @@
 
 # Week 6: Electronic Input Devices
 
+##A. IR Transmit-Recieve: 
+
+I used 1K resistors to build the following circuits: 
+
+ <img src="IMG_3272.jpeg" alt="circuitdiagram" style="width:1300px;height:1061px;">
+
+
+
+
 ##B. Hand-Crafter Sensor: 
 
-###Capacitive Sensor: 
+###Capacitative Sensor: 
 
 I used 10K resistors to build the following circuit: 
+
+<img src="IMG_3270.jpeg" alt="circuitdiagram" style="width:703px;height:690px;">
+
+<img src="IMG_5989.JPG" alt="circuit" style="width:1997px;height:1507.5px;">
+<img src="IMG_5988.JPG" alt="circuit" style="width:1501.5px;height:1669px;">
+
+
 </br></br>
-
-<img src="IMG_3270.jpeg" alt="normal graph" style="width:703px;height:690px;">
-
-<img src="IMG_5989.JPG" alt="normal graph" style="width:1997px;height:1507.5px;">
-<img src="IMG_5988.JPG" alt="normal graph" style="width:1501.5px;height:1669px;">
-
-
-</br></br>
-Resultant Values: </br>
-Min = -11</br>
-Max = 650 
+####Resultant Values: </br>
 
    <img src="CapactitativeSensor.jpeg" alt="normal graph" style="width:1138px;height:706px;">
 
-I can control this range with the pressure I apply to the sensor, whether I touch it with my fingers or leave another layer in between, or if I push with both fingers at once as opposed to one against a desk. 
+Min = -11</br>
+Max = 650 
  </br>
  </br>
-I can also control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
+I can control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
 </br>
  </br>
-###Lowering the voltage:
+####Lowering the voltage:
 - going from 5V to 3.3V 
 - leads to a greater range
 </br>
@@ -50,9 +57,11 @@ Max = 1316
 
  <img src="LoweredVoltage.jpeg" alt="lowered voltage" style="width:1138px;height:706px;">
 
-###Changing resistors: 
+####Changing resistors: 
 - Going from 10K to 1K
 - Led to a smaller range 
+</br>
+ </br>
 Min = -17 </br>
 Max = 109
 
