--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -20,7 +20,7 @@ I used 1K resistors to build the following circuits:
 
  <img src="IMG_3272.jpeg" alt="circuitdiagram" style="width:1300px;height:1061px;">
 
-<img src="IMG_6021.jpeg" alt="circuit" style="width:1003.25px;height:727.25px;">
+<img src="IMG_6021.JPG" alt="circuit" style="width:1003.25px;height:727.25px;">
 
 
 ##B. Hand-Crafter Sensor: 
