--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -24,6 +24,8 @@ I used 1K resistors to build the following circuits:
 
 <img src="IMG_6020.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
 
+<img src="IMG_6025.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
+
 
 ##B. Hand-Crafter Sensor: 
 
