--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -26,6 +26,27 @@ I used 1K resistors to build the following circuits:
 
 <img src="IMG_6025.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
 
+</br></br>
+####Resultant Values: </br>
+ <img src="IRSensorMain.jpeg" alt="normal graph" style="width:1138px;height:706px;">
+
+Min = 3</br>
+Max = 32 
+ </br>
+ </br>
+I can control the range based one the amount of voltage I provide the sensor and the resistors I use in the circuit. 
+</br>
+ </br>
+####Lowering the voltage:
+- going from 5V to 3.3V 
+- leads to a smaller range
+</br>
+ </br>
+Min = 3 </br>
+Max = 18
+
+<img src="IRSensorLessV.jpeg" alt="less V graph" style="width:1138px;height:706px;">
+
 
 ##B. Hand-Crafter Sensor: 
 
