--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -47,6 +47,10 @@ Max = 18
 
 <img src="IRSensorLessV.jpeg" alt="less V graph" style="width:1138px;height:706px;">
 
+####Changing Resistors: 
+
+**Didn't have enough to do this part, will complete in lab 
+
 
 ##B. Hand-Crafter Sensor: 
 
