--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -98,9 +98,9 @@ Max = 109
 
 
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
+  
 
-  And here is a [link](../index.html).
+[home](../index.html).
 
 
 
