--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -16,11 +16,11 @@
 
 ##A. IR Transmit-Recieve: 
 
-I used 1K resistors to build the following circuits: 
+I used 1K resistors to build the following circuit: 
 
  <img src="IMG_3272.jpeg" alt="circuitdiagram" style="width:650px;height:530.5px;">
 
-<img src="IMG_6021.JPG" alt="circuit" style="width:1003.25px;height:727.25px;">
+<img src="IMG_6021.JPG" alt="circuit" style="width:501px;height:363px;">
 
 <img src="IMG_6020.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
 
@@ -28,7 +28,7 @@ I used 1K resistors to build the following circuits:
 
 </br></br>
 ####Resultant Values: </br>
- <img src="IRSensorMain.jpeg" alt="normal graph" style="width:1138px;height:706px;">
+ <img src="IRSensorMain.jpeg" alt="normal graph" style="width:569px;height:353px;">
 
 Min = 3</br>
 Max = 32 
@@ -45,7 +45,7 @@ I can control the range based one the amount of voltage I provide the sensor and
 Min = 3 </br>
 Max = 18
 
-<img src="IRSensorLessV.jpeg" alt="less V graph" style="width:1138px;height:706px;">
+<img src="IRSensorLessV.jpeg" alt="less V graph" style="width:569px;height:353px;">
 
 ####Changing Resistors: 
 
@@ -67,7 +67,7 @@ I used 10K resistors to build the following circuit:
 </br></br>
 ####Resultant Values: </br>
 
-   <img src="CapactitativeSensor.jpeg" alt="normal graph" style="width:1138px;height:706px;">
+   <img src="CapactitativeSensor.jpeg" alt="normal graph" style="width:569px;height:353px;">
 
 Min = -11</br>
 Max = 650 
