--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -20,11 +20,11 @@ I used 1K resistors to build the following circuit:
 
  <img src="IMG_3272.jpeg" alt="circuitdiagram" style="width:650px;height:530.5px;">
 
-<img src="IMG_6021.JPG" alt="circuit" style="width:501px;height:363px;">
+<img src="IMG_6021.JPG" alt="circuit" style="width:276px;height:200px;">
 
-<img src="IMG_6020.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
+<img src="IMG_6020.JPG" alt="circuit" style="width:267px;height:200px;">
 
-<img src="IMG_6025.JPG" alt="circuit" style="width:968.19px;height:727.25px;">
+<img src="IMG_6025.JPG" alt="circuit" style="width:267px;height:200px;">
 
 </br></br>
 ####Resultant Values: </br>
@@ -58,7 +58,7 @@ Max = 18
 
 I used 10K resistors to build the following circuit: 
 
-<img src="IMG_3270.jpeg" alt="circuitdiagram" style="width:703px;height:690px;">
+<img src="IMG_3270.jpeg" alt="circuitdiagram" style="width:541x;height:530.5px;">
 
 <img src="IMG_5989.JPG" alt="circuit" style="width:1997px;height:1507.5px;">
 <img src="IMG_5988.JPG" alt="circuit" style="width:1501.5px;height:1669px;">
