--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -72,6 +72,8 @@ Here is all the code used for this sensor:
           delay(100); // wait in between printings                                      
         }
 
+</code></pre> 
+
 
 ##B. Hand-Crafter Sensor: 
 
