--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -116,7 +116,11 @@ Max = 109
 
 <img src="1KResistors.jpeg" alt="changed resistance" style="width:569px;height:353px;">
 
+####Code: 
 
+I used the tx-rx code from the class website without modifying it, as that was not required for this assignment. 
+
+However, I do intend on using capacitative sensors in my final project, so my ideas about how to use the sensors creatively can be found [there](../13_Final_Project/index.html). 
 
   
 
