--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -23,6 +23,8 @@
   Here is a (very simple) illustration of what I hope to create: 
 
   ![Sketch of new idea](./NewIdeaDrawing.jpg)
+  <img src="IMG_3274.jpeg" alt="overhead sketches" style="width:1373px;height:242px;">
+  <img src="IMG_3274.jpeg" alt="overhead sketches" style="width:1415px;height:298px;">
 
 #Project Plan: 
 
