--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -20,7 +20,7 @@
 
   A musical instrument built using photoresistors/thermistors to detect the location of the user's fingers, allowing them to play varied notes without needing to touch an instrument. They would be able to play chords and varying intensities of the notes. The instrument would also be able to change octaves and have a display to show the user what chord/note they are playing. 
 
-  Here is a (very simple) illustration of what I hope to create: 
+  Here are some (very simple) illustration of what I hope to create: 
 
   <img src="IMG_3274.jpeg" alt="overhead sketches" style="width:1373px;height:242px;">
   <img src="IMG_3273.jpeg" alt="overhead sketches" style="width:1415px;height:298px;">
