--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -12,7 +12,7 @@
 
 
 
-  ### Week 13: Final Project
+  # Week 13: Final Project
 
   
 
@@ -25,7 +25,7 @@
   <img src="IMG_3274.jpeg" alt="overhead sketches" style="width:1373px;height:242px;">
   <img src="IMG_3273.jpeg" alt="overhead sketches" style="width:1415px;height:298px;">
 
-#Project Plan: 
+##Project Plan: 
 
    It would utilize an Arduino and breadboarding, as well as code likely executed in the Arduino IDE (instead of matlab, as we've been using that method for coding in class). This project is basically a more complex version of a more rudimentary project I created last year that follows the same concept (a musical instrument operated based on the varied detection of light/heat from disparate sources). 
 
@@ -37,7 +37,7 @@
   ![image of initial version](./CompSciFST2021.jpg)
 
 
-#Bill of Materials: 
+##Bill of Materials: 
 
 <table>
   <tr>
@@ -90,7 +90,7 @@
   </tr>
 </table> 
 
-#Timeline: 
+##Timeline: 
 
 - Create CAD designs (July 10th)
 - Assemble smaller versions of the circuit and write sections of code for proof of concept 
