--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -56,7 +56,7 @@
     <td>Buttons</td>
     <td>26</td>
     <td>To serve as the input and for the octave changer</td>
-    <td>$4.99 for 20 buttons [link](https://www.amazon.com/Momentary-Tactile-Through-Breadboard-Friendly/dp/B07WF76VHT/ref=asc_df_B07WF76VHT/?tag=hyprod-20&linkCode=df0&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145&psc=1&tag=&ref=&adgrpid=79419940980&hvpone=&hvptwo=&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145)</td>
+    <td>$4.99 for 20 buttons | [link](https://www.amazon.com/Momentary-Tactile-Through-Breadboard-Friendly/dp/B07WF76VHT/ref=asc_df_B07WF76VHT/?tag=hyprod-20&linkCode=df0&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145&psc=1&tag=&ref=&adgrpid=79419940980&hvpone=&hvptwo=&hvadid=385639465088&hvpos=&hvnetw=g&hvrand=7725454326539758219&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1018092&hvtargid=pla-840596479145)</td>
   </tr>
   <tr>
     <td>Wires</td>
@@ -80,13 +80,13 @@
     <td>7 Segment Displays</td>
     <td>2</td>
     <td>isplaying the note/chord played </td>
-    <td>$14.99 for 5, all in different colours [link](https://www.amazon.com/diymore-Display-Digital-Decimal-Segment/dp/B07MCGDST2/ref=sr_1_1_sspa?crid=3SQ3Q8LS0WGKA&keywords=7+segment+display&qid=1657158084&s=industrial&sprefix=7+segmen%2Cindustrial%2C292&sr=1-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyUjhCWFk1TjNGMTQ0JmVuY3J5cHRlZElkPUEwNTE2NzQxMjJBVFQzNThYTEozUiZlbmNyeXB0ZWRBZElkPUEwNTg2MTY1MkNKQzBROVhBWDlEVSZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=)</td>
+    <td>$14.99 for 5, all in different colours | [link](https://www.amazon.com/diymore-Display-Digital-Decimal-Segment/dp/B07MCGDST2/ref=sr_1_1_sspa?crid=3SQ3Q8LS0WGKA&keywords=7+segment+display&qid=1657158084&s=industrial&sprefix=7+segmen%2Cindustrial%2C292&sr=1-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyUjhCWFk1TjNGMTQ0JmVuY3J5cHRlZElkPUEwNTE2NzQxMjJBVFQzNThYTEozUiZlbmNyeXB0ZWRBZElkPUEwNTg2MTY1MkNKQzBROVhBWDlEVSZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=)</td>
   </tr>
   <tr>
     <td>Piezo Buzzer</td>
     <td>1</td>
     <td>Playing the noise</td>
-    <td>$6.98 for 1 [link](https://www.amazon.com/GBSTORE-9-15V-Active-Electronic-Buzzer/dp/B01JU3SK1I/ref=sr_1_2?crid=1E2M40LHJ5JXI&keywords=piezo+buzzer&qid=1657158187&s=industrial&sprefix=piezo+buzzer%2Cindustrial%2C53&sr=1-2)</td>
+    <td>$6.98 for 1 | [link](https://www.amazon.com/GBSTORE-9-15V-Active-Electronic-Buzzer/dp/B01JU3SK1I/ref=sr_1_2?crid=1E2M40LHJ5JXI&keywords=piezo+buzzer&qid=1657158187&s=industrial&sprefix=piezo+buzzer%2Cindustrial%2C53&sr=1-2)</td>
   </tr>
 </table> 
 
