--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -128,7 +128,7 @@ void loop() {
     if (a <= 25 ){
     Serial.println("No obstacle");
     }
-    else if (25<a<30) {
+    else if (25 &lt a &lt 30) {
     Serial.println("~25 cm");
     }
      else if (30<a<40) {
