--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -131,19 +131,19 @@ void loop() {
     else if (25 &lt a &lt 30) {
     Serial.println("~25 cm");
     }
-     else if (30<a<40) {
+     else if (30 &lt a &lt 40) {
     Serial.println("~20 cm");
     }
-     else if (40<a<55) {
+     else if (40 &lt a &lt 55) {
     Serial.println("~15 cm");
     }
-     else if (55<a<75) {
+     else if (55 &lt a &lt 75) {
     Serial.println("~10 cm");
     }
-     else if (75<a<100) {
+     else if (75 &lt a &lt 100) {
     Serial.println("~5 cm");
     }
-     else if (100<a<140) {
+     else if (100 &lt a &lt 140) {
     Serial.println("0 cm");
     }
 
