--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -23,7 +23,7 @@
 
 I used 1K resistors to build the following circuit: 
 
- <img src="IMG_3272.jpeg" alt="circuitdiagram" style="width:650px;height:530.5px;">
+ <img src="Updatedcircuit.jpeg" alt="circuitdiagram" style="width:650px;height:530.5px;">
 
 <img src="IMG_6021.JPG" alt="circuit" style="width:276px;height:200px;">
 <img src="IMG_6020.JPG" alt="circuit" style="width:267px;height:200px;">
