--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -51,8 +51,11 @@ Max = 18
 <img src="IRSensorLessV.jpeg" alt="less V graph" style="width:569px;height:353px;">
 
 ####Changing Resistors: 
+- switching to 10K Ohm resistors 
+- leads to a reversal in values (high values as default, then they get lower and object proximity increases)
+- larger range 
 
-**Didn't have enough to do this part, will complete in lab 
+ <img src="RaisedResistanceIR.jpeg" alt="more R graph" style="width:569px;height:353px;">
 
 ####Code: 
 
