--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -54,6 +54,10 @@ Max = 18
 - switching to 10K Ohm resistors 
 - leads to a reversal in values (high values as default, then they get lower and object proximity increases)
 - larger range 
+</br>
+ </br>
+Min = 50 </br>
+Max = 169
 
  <img src="RaisedResistanceIR.jpeg" alt="more R graph" style="width:569px;height:353px;">
 
