--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -84,7 +84,7 @@ There were new ranges when I set up the circuit again (despite it being the exac
 
 <img src="IRSensorCalibratingRange.JPEG" alt="normal graph" style="width:569px;height:353px;">
 
-Min = 9
+Min = 9 </br>
 Max = 136
 
 Distance-Sensor Values: 
