--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -106,6 +106,16 @@
 
   Click [here](../index.html) to go back to the home page.
 
+##CAD Designs: 
+
+*Note that these are preliminary and will require tweaking throughout the process of construction 
+
+Here are the links to the models, as well as screenshots of them: 
+
+[Main Casing, with hole for octave changer button](https://a360.co/3O63rS0) <br/>
+[Key Component](https://a360.co/3ySWgYS)<br/>
+[7 Segment Display Casing (will be attached to the overall casing)](https://a360.co/3bY1eKJ)
+
 
 
 </xmp>
