pics and sizing

--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -117,6 +117,10 @@ Here are the links to the models, as well as screenshots of them:
 [7 Segment Display Casing (will be attached to the overall casing)](https://a360.co/3bY1eKJ)
 
 
+<img src="Casing1.jpeg" alt="main casing" style="width:682px;height:424.5px;">
+<img src="7SegDispHolder.jpeg" alt="7 seg disp holder" style="width:635.5px;height:367px;">
+<img src="Key.jpeg" alt="key" style=style="width:615px;height:346px;">
+
 
 </xmp>
 </body>
